--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <link rel="icon" type="image" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/email_val.js"></script>
 
   <title>Responsive sign up form</title>
